--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,15 +5,181 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tayka</title>
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-
-    <div class="container">
-      <div class="row">
-        <div class="col">Column</div>
-        <div class="col">Column</div>
-        <div class="col">Column</div>
+    <section class="hero">
+      <div class="hero__cloudWrap">
+        <img src="./images/cloud.png" alt="cloud" />
       </div>
-    </div>
+      <div class="hero__cloudBigWrap">
+        <img src="./images/cloudBig.png" alt="cloudBig" />
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="hero__content">
+              <h1 class="hero__title">
+                <span>TAYKA’S </span> history Begins here...
+              </h1>
+              <p class="hero__description">
+                Algunas historias comienzan en el punto más bajo Embárcate en
+                esta peculiar historia.
+              </p>
+              <button class="btn">Ver más</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="hero__womanWrap">
+        <img src="./images/woman.png" alt="woman" />
+      </div>
+    </section>
+
+    <main class="main">
+      <div class="container">
+        <div class="tkMain">
+          <div class="row">
+            <div class="col">
+              <h1 class="title">Formando el futuro</h1>
+              <p>
+                Centramos nuestros esfuerzos en crear nuevas posibilidades para
+                el mundo, a través del diseño y desarrollo de tecnología
+                inteligente orientada al bienestar, la convivencia y la
+                comodidad de todas las personas.
+              </p>
+              <button class="btn">Ver más</button>
+            </div>
+            <div class="col">
+              <img src="./images/laptop.png" alt="laptop" />
+            </div>
+          </div>
+        </div>
+
+        <div class="tkMain">
+          <div class="row">
+            <div class="col">
+              <img src="./images/phone.png" alt="phone" />
+            </div>
+            <div class="col col-inverse">
+              <img src="./images/maki_logo.png" alt="maki_logo" />
+              <p>
+                Centramos nuestros esfuerzos en crear nuevas posibilidades para
+                el mundo, a través del diseño y desarrollo de tecnología
+                inteligente orientada al bienestar, la convivencia y la
+                comodidad de todas las personas.
+              </p>
+              <button class="btn">Ver más</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="tkMain">
+          <div class="row">
+            <div class="col">
+              <img src="./images/kusa.png" alt="kusa" />
+              <p>
+                Plataforma de venta de artículos en oferta de empresas
+                provenientes del mercado a precio reducido o de descuento. La
+                aplicación contará la posibilidad de brindar al proveedor de
+                tener su tienda de venta virtual con todas las herramientas para
+                su alcance de ventas mensuales y organizar sus artículos en
+                stock de forma más personalizada, brindando un espacio dinámico
+                y seguro de compraventa.
+              </p>
+              <button class="btn">Ver más</button>
+            </div>
+            <div class="col">
+              <img src="./images/celular_phone.png" alt="celular_phone" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <section class="tkOnlyImage">
+      <img src="./images/onlyImage.jpg" alt="onlyImage" />
+    </section>
+
+    <section class="tkTarget__wrap">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="tkTarget">
+              <div class="tkTarget__imageWrap">
+                <img src="./images/Group.png" alt="Group" />
+              </div>
+              <div class="tkTarget__contentWrap">
+                <p class="tkTarget__description">
+                  Telemedicina: Conoce las herramientas Tecnológicas para la
+                  salud.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="tkTarget">
+              <div class="tkTarget__imageWrap">
+                <img src="./images/Group.png" alt="Group" />
+              </div>
+              <div class="tkTarget__contentWrap">
+                <p class="tkTarget__description">
+                  Youcareable: Camiseta con Tecnología 5G para el monitoreo de
+                  la salud.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="tkTarget">
+              <div class="tkTarget__imageWrap">
+                <img src="./images/Group.png" alt="Group" />
+              </div>
+              <div class="tkTarget__contentWrap">
+                <p class="tkTarget__description">
+                  Qué es 5G y como mejora la calidad del trabajo durante la
+                  cuarentena?.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="row">
+        <div class="col-12">
+          <div class="footer__title">
+            <p>Politicas de Cookies</p>
+            <p>Terminos y condiciones</p>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="footer__logoWrap">
+            <img src="./images/logo.png" alt="logo" />
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="footer__social social">
+            <div class="social__iamgesWrap">
+              <img src="./images/maki_logo.png" alt="maki_logo" />
+              <img src="./images/kusa.png" alt="kusa" />
+            </div>
+            <button class="btn">Ayuda<img src="./images/kusa.png" alt="kusa" /></button>
+            <div class="icon">
+              <i class="fab fa-whatsapp"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
