--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tayka</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <section class="hero">
       <div class="hero__cloudWrap">
@@ -152,6 +159,118 @@
       </div>
     </section>
 
+    <main class="tkMainAbout">
+      <section class="tkVideo">
+        <div class="container">
+          <div class="tkVideo__videoWrap">
+            <img class="tkVideo__video" src="./images/video.jpg" />
+          </div>
+        </div>
+      </section>
+
+      <section class="tkInformation">
+        <div class="tkInformation__titleLogo">
+          <img src="./images/TAYKA.png" />
+        </div>
+
+        <p class="tkInformation__description">
+          Muchas de las grandes ideas nacen de los momentos más difíciles, y
+          para Roberto Figueroa,director general y programador de sistemas, fue
+          el crear una empresa desarrolladora de software.
+        </p>
+        <p class="tkInformation__description">
+          Gracias a su amplia experiencia en gestión y creación de distintas
+          empresas alrededor del mundo como Chile, Bolivia, Venezuela y España,
+          Roberto decidió buscar y unir a 15 socios de distintos países con
+          potencial para emprender y crear nuevas ideas en el mundo digital,
+          dando así inicio durante la pandemia del 2020 a Tayka, una creadora y
+          generadora de tecnología.
+        </p>
+        <p class="tkInformation__description">
+          Nuestra empresa creció bajo la idea de desarrollar diversos software
+          para ayudar a las personas con sus necesidades diarias durante la
+          cuarentena; la cual ha sido posible gracias a los líderes por la cual
+          está conformada actualmente:
+        </p>
+
+        <div class="tkInformation__profileWrap">
+          <div class="tkProfile">
+            <div class="tkProfile__content">
+              <h3 class="tkProfile__title">Roberto Figueroa</h3>
+              <p class="tkProfile__description">
+                Director general y presidente del directorio
+              </p>
+            </div>
+
+            <div class="tkProfile__photoWrap">
+              <img
+                src="./images/photo1"
+                alt="photo1"
+                class="tkProfile__photo"
+              />
+            </div>
+          </div>
+          //multiplicar por 5
+        </div>
+      </section>
+
+      <section class="tkInformation">
+        <div class="container">
+          <p class="tkInformation__description">
+            Tayka sigue innovando, creando y creciendo en el mundo tecnológico
+            de manera internacional, por eso nos gustaría mostrarte las
+            experiencias de las personas que han hecho esto posible…
+          </p>
+        </div>
+      </section>
+
+      <section class="tkValue__wrap">
+        <h2 class="tkValue__titleBig">Valores</h2>
+        <div class="container">
+          <div class="tkValue">
+            <div class="tkValue__content">
+              <h3 class="tkValue__title">Eficiencia </h3>
+              <ul class="tkValue__descriptionWrap">
+                <li class="tkValue__description">
+                  * Trabajamos bajo un estudio previo de análisis y necesidades
+                  reales
+                </li>
+                <li class="tkValue__description">
+                  * Focalizamos la solución a un problema desarrollando
+                  alternativas de calidad
+                </li>
+              </ul>
+            </div>
+            <div class="tkValue__imageWrap">
+              <img src="./images/value1" alt="value1" class="tkValue__image" />
+            </div>
+          </div>
+
+          <div class="tkValue">
+            <div class="tkValue__imageWrap">
+              <img src="./images/value2" alt="value2" class="tkValue__image" />
+            </div>
+
+            <div class="tkValue__content">
+              <h3 class="tkValue__title">Trabajo en equipo
+              </h3>
+              <ul class="tkValue__descriptionWrap">
+                <li class="tkValue__description">
+                  * Actuamos con responsabilidad, disciplina y eficiencia 
+                </li>
+                <li class="tkValue__description">
+                  * Interrelación constante de los departamentos de la empresa
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          // Render + 6
+        </div>
+      </section>
+    </main>
+
+    <!-- Footer ----------------- -->
     <footer class="footer">
       <div class="row">
         <div class="col-12">
@@ -173,7 +292,9 @@
               <img src="./images/maki_logo.png" alt="maki_logo" />
               <img src="./images/kusa.png" alt="kusa" />
             </div>
-            <button class="btn">Ayuda<img src="./images/kusa.png" alt="kusa" /></button>
+            <button class="btn">
+              Ayuda<img src="./images/kusa.png" alt="kusa" />
+            </button>
             <div class="icon">
               <i class="fab fa-whatsapp"></i>
             </div>
